--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="image__container">
         <img src="/images/image-equilibrium.jpg" alt="" width="300px" class="imags">
         <div class="overlay">
-          <img src="/images/icon-view.svg" alt="" class="view">
+          <img src="images/icon-view.svg" alt="" class="view">
         </div>
       </div>
       <figure>
