--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </figure>
       <hr>
      <div class="nft__imge">
-      <img src="/images/image-avatar.png" alt="" width="32px" class="nike2">
+      <img src="images/image-avatar.png" alt="" width="32px" class="nike2">
      <p class="nike1">
       <span class="creation">Creation of</span> <span class="creator-name">Jules Wyvern</span></p>
      </div>
